# python-tcr-refactoring-kata

./: .gitignore  Makefile  pyproject.toml  tcr.sh
