[tool.poetry]
name = "supermarketreceipt-refactoring-kata"
version = "0.1.0"
description = ""
authors = ["Craig J. Bass <1889973+craigjbass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
approvaltests = "^5.0.2"
python-dateutil = "^2.8.2"
pytest-approvaltests = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
